cabal-version: 1.12
name:          datetimes
version:       0.1.2.0
license:       Apache
license-file:  LICENSE
maintainer:    Adjoint Inc (info@adjoint.io)
author:        Adjoint Inc
homepage:      https://github.com/adjoint-io/datetime#readme
bug-reports:   https://github.com/adjoint-io/datetime/issues
category:      Finance
build-type:    Simple

source-repository head
  type:     git
  location: https://github.com/adjoint-io/datetime

library
  exposed-modules:
    Datetime
    Datetime.Types

  hs-source-dirs:   src
  other-modules:    Paths_datetimes
  default-language: Haskell2010
  ghc-options:
    -fwarn-unused-imports -fwarn-incomplete-patterns
    -fwarn-incomplete-uni-patterns

  build-depends:
      aeson      >=1.1     && <1.6
    , base       >=4.7     && <5
    , binary     >=0.8.5.1 && <0.9
    , cereal     >=0.5     && <0.6
    , hourglass  >=0.2     && <0.3
    , protolude  >=0.2     && <0.4
    , time       >=1.6.0.1 && <1.10

test-suite datetimes-test
  type:             exitcode-stdio-1.0
  main-is:          Test.hs
  hs-source-dirs:   test
  other-modules:    Paths_datetimes
  default-language: Haskell2010
  build-depends:
      aeson             >=1.1      && <1.6
    , base              >=4.7      && <4.15
    , binary            >=0.8.5.1  && <0.9
    , cereal            >=0.5      && <0.6
    , datetimes
    , hourglass         >=0.2      && <0.3
    , protolude         >=0.2      && <0.4
    , QuickCheck        >=2.12     && <2.15
    , tasty             >=1.2      && <1.4
    , tasty-hunit       >=0.10.0.0 && <0.11
    , tasty-quickcheck  >=0.10     && <0.11
    , time              >=1.6.0.1  && <1.10
